2003-02-23  James Tanis  <jtt@hawking.sysdetect.com>

	* lib/b_string.c (bk_string_unique_string): Avoid placing EOS
	marker in middle of string (snprintf(3) *guarentees* an EOS at the
	end).

2003-02-22  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_error.c (bk_error_iprintbuf): Don't go through
	error_printf for two reasons: eliminate memory size constraint,
	eliminate possibility for printf char interpolation.

2003-02-13  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* include/libbk.h: Added BK_MIN and MK_MAX.

2003-02-11  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_memx.c (bk_memx_addstr): Wrapper around bk_memx_get to
	handle the common(?) case where you want to have an infinately
	expandable string which keeps getting appended to.

	* lib/b_md5.c (bk_MD5_extract_printable): Make sure that extracted
	string is in fact null terminated

2003-02-05  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* include/libbk.h: Added bk_bitfield and bk_timespec.

2003-02-02  James Tanis  <jtt@hawking.sysdetect.com>

	* lib/b_listnum.c (bk_listnum_next): Remove pointer from CLC
	*before* freeing (wild pointer reference -- not really, but this
	is more correct and shuts up insight).

2003-01-31  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c (bsre_create): Add reference cnt to string
	registry to avoid overfreeing (created wild pointers).

	* include/libbk_oscompat.h (BK_FINISH_FUN): Insure no longer
	chokes on __contructor__ attribute.

	* include/libbk.h (realloc): Redefine realloc() when INSURE is on,
	otherwise you must deal with a multitude of FREE_NULL "errors".

2003-01-23  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_nvmap.c (bk_nvmap_name2value): Type int values to
	u_int64_t so pointers can be held in nvmaps.

2003-01-21  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_bnbio.c (bk_iohh_bnbio_write): return error status [data eaten]
	(bk_iohh_bnbio_geterr): return error message from ioh errno
